# SauceDemoProject

./: conftest.py  pyproject.toml  pytest.ini  test_saucedemo.py
pages/: locators.py  login_page.py  products_page.py
