[tool.black]
line-length = 79

[tool.poetry]
name = "saucedemoproject"
version = "0.1.0"
description = ""
authors = ["Oleg K <114308068+OlegKomissarovV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
